another take on pavarotti